--- a/src/index.scss
+++ b/src/index.scss
@@ -50,7 +50,13 @@ h1, h2, h3, h4, h5, h6 {
 .color-ivory {
   color: $ivory !important;
 }
+.color-white {
+  color: $white !important;
+}
 .color-black {
+  color: $black !important;
+}
+.color-dark {
   color: $dark !important;
 }
 .color-charcoal {
@@ -61,26 +67,35 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .shadow-ivory {
-  text-shadow: 1px 1px 4px $ivory;
+  text-shadow: 1px 1px 2px $ivory;
 }
 .shadow-ivory-2 {
-  text-shadow: 2px 2px 6px $ivory;
+  text-shadow: 2px 2px 3px $ivory;
 }
 .shadow-charcoal {
-  text-shadow: 1px 1px 4px $charcoal;
+  text-shadow: 1px 1px 2px $charcoal;
 }
 .shadow-charcoal-2 {
-  text-shadow: 2px 2px 6px $charcoal;
+  text-shadow: 2px 2px 3px $charcoal;
 }
 
 .bg-color-black {
+  background-color: $black !important;
+}
+.bg-color-dark {
   background-color: $dark !important;
 }
 .bg-color-charcoal {
   background-color: $charcoal !important;
 }
+.bg-color-charcoal-5 {
+  background-color: rgba($charcoal, 0.5) !important;
+}
 .bg-color-ebony {
   background-color: $ebony;
+}
+.bg-color-white {
+  background-color: $white;
 }
 .bg-color-ivory {
   background-color: $ivory;
@@ -182,6 +197,7 @@ html {
 }
 body, #root {
   min-height: 100%;
+  overflow-x: hidden;
 }
  
 .footer > div {
@@ -219,7 +235,21 @@ button.btn-link:hover {
 .fa-heart {
   color: $charcoal !important;
 }
-
+.blur-1 {
+  filter: blur(1px);
+}
+.blur-2 {
+  filter: blur(2px);
+}
+.blur-3 {
+  filter: blur(3px);
+}
+.blur-4 {
+  filter: blur(4px);
+}
+.blur-5 {
+  filter: blur(5px);
+}
 .grayscale {
   filter: grayscale(1);
 }
@@ -229,11 +259,14 @@ button.btn-link:hover {
 .grayscale-75 {
   filter: grayscale(0.75);
 }
-.grayscale-5 {
-  filter: grayscale(0.5);
+.grayscale-50 {
+  filter: grayscale(0.50);
 }
 .grayscale-25 {
   filter: grayscale(0.25);
+}
+.grayscale-0 {
+  filter: grayscale(0.0);
 }
 
 
