Added Managing ability to Admin users

--- a/src/index.scss
+++ b/src/index.scss
@@ -106,7 +106,9 @@ h1, h2, h3, h4, h5, h6 {
 .bg-color-almond {
   background-color: $almond;
 }
-
+.fs-08 {
+  font-size: 0.8rem;
+}
 h1 { font-size: 5rem !important;}
 h2 { font-size: 4rem !important;}
 h3 { font-size: 3rem !important;}
